<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/included_toolbar"
        layout="@layout/app_toolbar" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_interests" />

    <CheckBox
        android:id="@+id/checkBoxCats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cats" />
    <CheckBox
        android:id="@+id/checkBoxDogs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dogs" />
    <CheckBox
        android:id="@+id/checkBoxTigers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tigers" />
</LinearLayout>
