<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorDarkBackground"
        android:fontFamily="sans-serif-medium"
        android:padding="20dp"
        android:text="@string/app_title"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:typeface="normal" />

    <Button
        android:id="@+id/buttonToMemo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="40dp"
        android:paddingBottom="40dp"
        android:text="@string/zoologists_memo" />

    <Button
        android:id="@+id/buttonToFavorite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="40dp"
        android:paddingBottom="40dp"
        android:text="@string/my_favorite_animal" />

    <Button
        android:id="@+id/buttonToGallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="40dp"
        android:paddingBottom="40dp"
        android:text="@string/animals_gallery" />
</LinearLayout>
