<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/activity_header"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:background="@color/colorDarkBackground"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/back_letter"
            android:textColor="@color/colorWhite"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/textViewHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/my_favorite_animal"
            android:textAlignment="center"
            android:textSize="24sp" />

    </LinearLayout>

    <EditText
        android:id="@+id/editTextAnimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_header"
        android:ems="10"
        android:hint="@string/animal"
        android:textColorHint="@color/colorAccent" />

    <EditText
        android:id="@+id/editTextComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextAnimal"
        android:ems="10"
        android:hint="@string/comment"
        android:inputType="textMultiLine"
        android:minLines="4"
        android:gravity="bottom|start"
        android:textColorHint="@color/colorAccent" />

    <Button
        android:id="@+id/buttonSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/send" />
</RelativeLayout>


